@@ -9,6 +9,9 @@ namespace AriaMaestosa
 
 namespace PlatformMidiManager
 {
+    // global flag that is set when ALSA midi could not be initialized
+    extern bool sound_available;
+
 void alsa_output_module_setContext(MidiContext* context_arg);
 
 void alsa_output_module_init();
